<resources>
    <string name="app_name">Dicoding Events</string>
    <string name="home_nav">Home</string>
    <string name="upcoming_nav">Upcoming</string>
    <string name="finished_nav">Finished</string>
    <string name="favorite_nav">Favorite</string>
    <string name="setting_nav">Setting</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="search_event_hint">Cari Event…</string>
    <string name="no_event_found">Event not found</string>
    <string name="detail_cover">Detail cover</string>
    <string name="penyelenggara">Penyelenggara: -</string>
    <string name="waktu">Waktu: -</string>
    <string name="sisa_kuota">Sisa Kuota: -</string>
    <string name="register">Register</string>
    <string name="organizer_format">Penyelenggara: %s</string>
    <string name="time_format">Waktu: %s</string>
    <string name="quota_format">Sisa Kuota: %s</string>
    <string name="upcoming_events_desc">Tingkatkan skill Anda dengan mengikuti sesi interaktif dari expert industri</string>
    <string name="finished_events_desc">Ketinggalan acara? Jangan khawatir, jelajahi kembali insight menarik dari berbagai acara yang telah berlalu.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>