<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_nav" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_event"
        android:title="@string/upcoming_nav" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_task"
        android:title="@string/finished_nav" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite_nav" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting_nav" />
</menu>

